Adicionando a borda nos itens da lista parte2 aula 5

--- a/produtos.css
+++ b/produtos.css
@@ -41,12 +41,12 @@ nav a {
     text-align: center;
     width: 30%;
     vertical-align: top;
-    background-color: #CCCCCC;
     margin: 0 1.5%;
     padding: 30px 20px;
     box-sizing: border-box; /*Controla o tamanho de padding dentro do width desejado*/
-    
-}
+    border: 2px solid #000;
+    border-radius: 10px;
+}   
 
 .produtos h2 {
     font-size: 30px;
